--- a/src/components/home/Experience.astro
+++ b/src/components/home/Experience.astro
@@ -13,7 +13,14 @@ const { title, details } = Astro.props as IExperiences;
       details.map((item) => (
         <div class="my-16">
           <div class="flex justify-between items-center flex-wrap">
-            <h3 class="text-2xl font-semibold">{item.name}</h3>
+            <div class="flex items-center space-x-2">
+              <h3 class="text-2xl font-semibold">{item.name}</h3>
+              {item.isInternship ? (
+                <div class="bg-blue rounded-3xl px-2 py-1">
+                  <p class="text-sm text-white">Internship</p>
+                </div>
+              ) : null}
+            </div>
             <p class="text-sm dark:text-gray">
               {item.startDate} - {item.endDate}
             </p>
