Add fade-up animation to various elements

--- a/src/components/general/Navbar.astro
+++ b/src/components/general/Navbar.astro
@@ -5,6 +5,8 @@ import { createLogo } from "@utils";
 
 <header
   class="container flex items-center justify-between h-[80px] sm:h-[123px]"
+  data-animate="fade-down"
+  data-animate-delay="0"
 >
   <a
     class="text-2xl dark:text-light font-semibold dark:font-semibold font-outfit"
