--- a/src/components/home/Experience.astro
+++ b/src/components/home/Experience.astro
@@ -6,12 +6,13 @@ const { title, details } = Astro.props as IExperiences;
 
 <section
   class="flex items-start justify-between flex-col sm:flex-row dark:text-light"
+  data-animate="fade-up"
 >
   <h2 class="w-[15rem] mt-16">{title}</h2>
   <div class="w-full">
     {
       details.map((item) => (
-        <div class="my-16">
+        <div class="my-16" data-animate="fade-up">
           <div class="flex justify-between items-center flex-wrap">
             <div class="flex items-center space-x-2">
               <h3 class="text-2xl font-semibold">{item.name}</h3>
