--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -4,9 +4,9 @@ import { IHeroProps } from "@types";
 const { name, about } = Astro.props as IHeroProps;
 ---
 
-<section>
+<section data-animate="fade" class="reveal-slow">
   <div class="flex flex-col md:flex-row items-center justify-start py-5">
-    <div class="w-full md:w-1/2">
+  <div class="w-full md:w-1/2" data-animate="fade-right" data-animate-delay="80">
       <p class="dark:text-light md:mt-[117px]">Hey, I’m</p>
       <h1>{name}</h1>
       <div
@@ -41,7 +41,7 @@ const { name, about } = Astro.props as IHeroProps;
         </a>
       </div>
     </div>
-    <div class="w-full md:w-1/2 px-16">
+  <div class="w-full md:w-1/2 px-16" data-animate="fade-left" data-animate-delay="120">
       <img class="w-fit h-fit" src="./yash.webp" alt="yash" />
     </div>
     <div
@@ -76,7 +76,7 @@ const { name, about } = Astro.props as IHeroProps;
       </a>
     </div>
   </div>
-  <p class="dark:text-light text-lg mb-16">
+  <p class="dark:text-light text-lg mb-16" data-animate="fade-up" data-animate-delay="160">
     {about}
   </p>
 </section>
