--- a/src/components/general/Footer.astro
+++ b/src/components/general/Footer.astro
@@ -4,6 +4,7 @@ import { info } from "@data";
 
 <footer
   class="container flex sm:flex-row flex-col justify-between items-center mb-8 sm:mb-4"
+  data-animate="fade-up"
 >
   <p class="dark:text-light text-right my-8">
     Developed by <strong>Yash Raut</strong>
