--- a/src/components/general/ProjectsWrapper.astro
+++ b/src/components/general/ProjectsWrapper.astro
@@ -5,6 +5,10 @@ import ProjectCard from "./ProjectCard.astro";
 const { projects } = Astro.props as IProjects;
 ---
 
-<div class="grid md:grid-cols-2 grid-cols-1 gap-4 my-16">
-  {projects.map((project) => <ProjectCard projectDetail={project} />)}
+<div class="grid md:grid-cols-2 grid-cols-1 gap-4 my-16" data-animate="fade-up">
+  {projects.map((project, i) => (
+    <div data-animate="fade-up" data-animate-delay={(i%4)*60}>
+      <ProjectCard projectDetail={project} />
+    </div>
+  ))}
 </div>
