Update script source path in Layout.astro file

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,4 +10,4 @@ import "../styles/style.css";
 </main>
 <Footer />
 
-<script is:inline src="/src/scripts/scroll-animate.js"></script>
+<script is:inline src="/scroll-animate.js"></script>
