Add Connect component for scheduling calls and emails

--- a/src/components/general/Footer.astro
+++ b/src/components/general/Footer.astro
@@ -59,8 +59,7 @@ import { info } from "@data";
     </a>
     <a
       aria-label="Social Media"
-      href={info.socialMedia.email}
-      target="_blank"
+      href={`mailto:${info.socialMedia.email}`}
       class="footer-icons"
     >
       <svg
